[package]
name = "bevy_toy_project"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19"
hexx = { version = "0.10", features = ["bevy_reflect"] }
